[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/GrenadeLauncher/mis6c0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/GrenadeLauncher/mis6b0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/GrenadeLauncher/mis6e0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/GrenadeLauncher/shrpo1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/GrenadeLauncher/mis6d0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/GrenadeLauncher/mis6f0.png" type="Texture" id=6]
[ext_resource path="res://Grenade.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "grenade",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "explode",
"speed": 11.0
} ]

[sub_resource type="SphereShape" id=2]
radius = 0.322374

[sub_resource type="SphereShape" id=3]
radius = 0.938372

[node name="Grenade" type="Area"]
script = ExtResource( 7 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
billboard = 2
frames = SubResource( 1 )
animation = "grenade"
playing = true

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="SplashDamage" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="SplashDamage"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Grenade_body_entered"]
[connection signal="body_entered" from="SplashDamage" to="." method="_on_SplashDamage_body_entered"]
